// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard events renders with events 1`] = `
<div
  className="row space-below"
>
  <div
    className="col"
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Latest events
        <button
          className="btn btn-outline-secondary fetch-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-redo-alt fa-w-16 "
            data-icon="redo-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256.455 8c66.269.119 126.437 26.233 170.859 68.685l35.715-35.715C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.75c-30.864-28.899-70.801-44.907-113.23-45.273-92.398-.798-170.283 73.977-169.484 169.442C88.764 348.009 162.184 424 256 424c41.127 0 79.997-14.678 110.629-41.556 4.743-4.161 11.906-3.908 16.368.553l39.662 39.662c4.872 4.872 4.631 12.815-.482 17.433C378.202 479.813 319.926 504 256 504 119.034 504 8.001 392.967 8 256.002 7.999 119.193 119.646 7.755 256.455 8z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="card-body text-center"
      >
        <div
          className="card-text"
        >
          <div
            className="row event-item"
          >
            <div
              className="col timestamp"
            >
              2018-04-28T17:57:24.540480643Z
            </div>
            <div
              className="col event"
            >
              AGENT_DOWN
            </div>
            <div
              className="col-6 payload codeblock"
            >
              <div
                className="react-json-view"
                style={
                  Object {
                    "backgroundColor": "rgba(0, 0, 0, 0)",
                    "cursor": "default",
                    "fontFamily": "monospace",
                    "position": "relative",
                  }
                }
              >
                <div
                  className="pretty-json-container object-container"
                >
                  <div
                    className="object-content"
                  >
                    <div
                      className="object-key-val"
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "paddingLeft": "2px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 15 15"
                              >
                                <path
                                  d="M0 14l6-6-6-6z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            {
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          }
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="object-size"
                            style={
                              Object {
                                "borderRadius": "3px",
                                "color": "rgba(0, 0, 0, 0.3)",
                                "cursor": "default",
                                "fontStyle": "italic",
                                "margin": "0px 6px 0px 0px",
                              }
                            }
                          >
                            1
                             item
                            
                          </span>
                          <span
                            className="copy-to-clipboard-container"
                          >
                            <span
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "display": "inline",
                                }
                              }
                            >
                              <span
                                className="copy-icon"
                              >
                                <svg
                                  fill="currentColor"
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "color": "#268bd2",
                                      "fontSize": "15px",
                                      "height": "1em",
                                      "marginRight": "3px",
                                      "verticalAlign": "top",
                                      "width": "1em",
                                    }
                                  }
                                  viewBox="0 0 40 40"
                                >
                                  <g>
                                    <path
                                      d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="row event-item"
          >
            <div
              className="col timestamp"
            >
              2018-04-28T17:50:15.170187929Z
            </div>
            <div
              className="col event"
            >
              AGENT_RECOVER
            </div>
            <div
              className="col-6 payload codeblock"
            >
              <div
                className="react-json-view"
                style={
                  Object {
                    "backgroundColor": "rgba(0, 0, 0, 0)",
                    "cursor": "default",
                    "fontFamily": "monospace",
                    "position": "relative",
                  }
                }
              >
                <div
                  className="pretty-json-container object-container"
                >
                  <div
                    className="object-content"
                  >
                    <div
                      className="object-key-val"
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "paddingLeft": "2px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 15 15"
                              >
                                <path
                                  d="M0 14l6-6-6-6z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            {
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          }
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="object-size"
                            style={
                              Object {
                                "borderRadius": "3px",
                                "color": "rgba(0, 0, 0, 0.3)",
                                "cursor": "default",
                                "fontStyle": "italic",
                                "margin": "0px 6px 0px 0px",
                              }
                            }
                          >
                            1
                             item
                            
                          </span>
                          <span
                            className="copy-to-clipboard-container"
                          >
                            <span
                              onClick={[Function]}
                              style={
                                Object {
                                  "cursor": "pointer",
                                  "display": "inline",
                                }
                              }
                            >
                              <span
                                className="copy-icon"
                              >
                                <svg
                                  fill="currentColor"
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "color": "#268bd2",
                                      "fontSize": "15px",
                                      "height": "1em",
                                      "marginRight": "3px",
                                      "verticalAlign": "top",
                                      "width": "1em",
                                    }
                                  }
                                  viewBox="0 0 40 40"
                                >
                                  <g>
                                    <path
                                      d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard events renders with no events 1`] = `
<div
  className="row space-below"
>
  <div
    className="col"
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Latest events
        <button
          className="btn btn-outline-secondary fetch-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-redo-alt fa-w-16 "
            data-icon="redo-alt"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256.455 8c66.269.119 126.437 26.233 170.859 68.685l35.715-35.715C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.75c-30.864-28.899-70.801-44.907-113.23-45.273-92.398-.798-170.283 73.977-169.484 169.442C88.764 348.009 162.184 424 256 424c41.127 0 79.997-14.678 110.629-41.556 4.743-4.161 11.906-3.908 16.368.553l39.662 39.662c4.872 4.872 4.631 12.815-.482 17.433C378.202 479.813 319.926 504 256 504 119.034 504 8.001 392.967 8 256.002 7.999 119.193 119.646 7.755 256.455 8z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="card-body text-center"
      >
        <p
          className="card-text large-icon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chart-area fa-w-16 "
            data-icon="chart-area"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M500 384c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v308h436zM372.7 159.5L288 216l-85.3-113.7c-5.1-6.8-15.5-6.3-19.9 1L96 248v104h384l-89.9-187.8c-3.2-6.5-11.4-8.7-17.4-4.7z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </p>
        <p
          className="card-text"
        >
          No data available
        </p>
      </div>
    </div>
  </div>
</div>
`;
